--- a/VoiceMemo/VoiceMemo/Info.plist
+++ b/VoiceMemo/VoiceMemo/Info.plist
@@ -41,5 +41,7 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>$(PRODUCT_NAME) will record voice memo</string>
 </dict>
 </plist>
